# nxincludedir=$(includedir)/nexus
nxincludedir=$(pkgincludedir)

# CPP headers go into nxinclude. Traditionally 
# nexus C headers went into include so we put
# them in both places for now
nxinclude_HEADERS = napi.h napiu.h

include_HEADERS   = napi.h napiu.h

noinst_HEADERS = napi4.h napi5.h nxxml.h napiconfig.h nxconfig_vms.h
